--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@ background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
 <body>
     
   <nav class="container">
-    <input id="nav-toggle" type="checkbox" />
-    <div class="logo"><img src="IMG/KoreGamesLogo.png" alt="Kore" ></div>
+    <div class="logo"><img src="IMG/KoreGamesLogo.png"  width="300" height="250" alt="Kore" ></div>
     <ul class="links">
       <li class="list">
   
       <li class="list">
-        <a href="">About</a>
+        <a href="about.html">About</a>
         <div class="home_underline"></div>
       </li>
-      <button>Contact</button>
+       <a href="contact.html">About</a>
+        <div class="home_underline"></div>
+      </li>
     </ul>
     <label for="nav-toggle" class="icon-burger">
       <div class="line"></div>
