--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
 <body>
     
   <nav class="container">
-    <div class="logo"><img src="IMG/KoreGamesLogo.png"  width="300" height="250" alt="Kore" ></div>
+    <div class="logo"><img src="IMG/KoreGamesLogo.png"  width="150" height="125" alt="Kore" ></div>
     <ul class="links">
       <li class="list">
   
@@ -35,7 +35,7 @@ background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
         <a href="about.html">About</a>
         <div class="home_underline"></div>
       </li>
-       <a href="contact.html">About</a>
+       <a href="contact.html">Contact</a>
         <div class="home_underline"></div>
       </li>
     </ul>
@@ -45,6 +45,6 @@ background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
       <div class="line"></div>
     </label>
   </nav>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdyHypLN2WeQ9elaa0F2j2bTeumCulnlL37_sXmM49hBp-m9Q/viewform?embedded=true" width="640" height="2093" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdyHypLN2WeQ9elaa0F2j2bTeumCulnlL37_sXmM49hBp-m9Q/viewform?embedded=true" width="640" height="1600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </body>
 </html>
