--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
       <li class="list">
         <a href="about.html">About</a>
         <div class="home_underline"></div>
-      </li>
+      
        <a href="contact.html">Contact</a>
         <div class="home_underline"></div>
       </li>
@@ -44,7 +44,7 @@ background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
       <div class="line"></div>
       <div class="line"></div>
     </label>
-  </nav> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  </nav> <br><br><br><br><br><br><br><br><br>
 <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdyHypLN2WeQ9elaa0F2j2bTeumCulnlL37_sXmM49hBp-m9Q/viewform?embedded=true" width="640" height="2093" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
 </body>
 </html>
