--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
 <body>
     
 <header>
-  <div class="logo">logo</div>
+  <div class="logo"><img src="IMG/KoreGamesLogo.png"></div>
   <nav>
     <ul>
       <li><a href="contact.html">Contact</a></li>
